added QApplication and created source/window

--- a/detector/CMakeLists.txt
+++ b/detector/CMakeLists.txt
@@ -1,5 +1,7 @@
 # detector
-add_executable(detector sources/main.cpp)
+add_executable(detector sources/main.cpp
+        sources/core/window.cpp
+        sources/core/window.hpp)
 
 # QT6
 ## link
